--- a/Assignments/assignment-6/travel-tales/src/app/globals.css
+++ b/Assignments/assignment-6/travel-tales/src/app/globals.css
@@ -18,7 +18,7 @@ body {
 .input-style {
   width: 100%;
   padding: 10px;
-  border: 2px solid #ccc;
+  border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 16px;
   outline: none;
@@ -27,6 +27,12 @@ body {
 .input-style:focus {
   border-color: #007bff;
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.common-shadow {
+  box-shadow: 0px 2px 3px -1px rgba(0, 0, 0, 0.1),
+    0px 1px 0px 0px rgba(25, 28, 33, 0.02),
+    0px 0px 0px 1px rgba(25, 28, 33, 0.08);
 }
 
 @layer base {
